# openwalk

./: Cargo.toml  README.md  openwalk.json
src/: app.rs  cli.rs  main.rs  output.rs  scheme_runtime.rs  tool_hub.rs  tool_metadata.rs  tool_ref.rs  workspace.rs
src/browser/: actor.rs  browser_ops.rs  dom.rs  emulation.rs  input.rs  mod.rs  network.rs  page.rs  performance.rs  runtime.rs  session.rs  storage.rs  tab.rs  types.rs  util.rs
src/browser/devtools/: console.rs  inspect.rs  mod.rs  raw.rs  tracing.rs
