[package]
name = "openwalk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "=4.5.30", features = ["derive"] }
chromiumoxide = "0.9.1"
futures = "0.3"
scheme4r = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.44", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
